# book-study-hub

./: README.md
books/linguagem-c/arquitetura-hexagonal-em-c/: README.md  capitulo1.md
books/linguagem-c/arquitetura-hexagonal-em-c/hexagonal/: CMakeLists.txt
books/linguagem-c/arquitetura-hexagonal-em-c/hexagonal/src/: main.c
books/linguagem-c/arquitetura-hexagonal-em-c/hexagonal/src/adapter/: display.c  display.h  keyboard.c  keyboard.h
books/linguagem-c/arquitetura-hexagonal-em-c/hexagonal/src/domain/: input_base.h  output_base.h  typewriter.c  typewriter.h
books/linguagem-c/linguagem-c-completa-e-descomplicada/: README.md  cap1_fatorial.c  cap2_exercicios.md  capitulo1.md  capitulo2.md
